# telegram_messages_fetcher

./: .envsample  .gitignore  README.md  __main__.py  docker-compose.yml  main.py  pyproject.toml
telegram_messages_archiver/: config.py  database.py  logger.py  main.py
telegram_messages_archiver/cmd/: __init__.py  root.py
telegram_messages_archiver/models/: __init__.py  base.py  dialog.py  message.py
telegram_messages_archiver/services/: __init__.py  database_manager.py  dialog_manager.py  message_manager.py  telegram_manager.py
