[tool.poetry]
name = "telegram-messages-archiver"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL v3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
telethon = "^1.38.1"
python-dotenv = "^1.0.1"
click = "^8.1.7"
sqlalchemy = "^2.0.36"
pymysql = "^1.1.1"
colorlog = "^6.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
